--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <artifactId>com.guarium.driver</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>com.guarium:driver</name>
-    <packaging>pom</packaging>
+    <packaging>war</packaging>
 
     <dependencies>
         <dependency>
