--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <artifactId>com.guarium.driver</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>com.guarium:driver</name>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -56,6 +56,20 @@
                         <phase>install</phase>
                         <goals>
                             <goal>start</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
                         </goals>
                     </execution>
                 </executions>
