--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     <build>
         <plugins>
 
-            <plugin>
+            <!--plugin>
                 <groupId>org.glassfish.embedded</groupId>
                 <artifactId>maven-embedded-glassfish-plugin</artifactId>
                 <version>3.1.2.2</version>
@@ -59,7 +59,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
